# qianli_auto_aim

./: .gitignore  MYLOG.md  README.md
src/closed_loop/: CMakeLists.txt  package.xml
src/closed_loop/include/closed_loop/: closed_loop.hpp  closed_loop_node.hpp  fixed_size_map_queue.hpp
src/closed_loop/src/: closed_loop.cpp  closed_loop_node.cpp  fixed_size_map_queue.cpp
src/mechax_trajectory/: CMakeLists.txt  package.xml
src/mechax_trajectory/include/mechax_trajectory/: trajectoryer.hpp
src/mechax_trajectory/src/: trajectoryer.cpp
src/rm_armor_detector/: CMakeLists.txt  README.md  package.xml
src/rm_armor_detector/config/: detector_parameters.yaml
src/rm_armor_detector/include/rm_armor_detector/: armor.hpp  cuda_detector.hpp  detector_node.hpp  lights_detector.hpp  number_classifier.hpp  openvino_detector.hpp  pnp_solver.hpp  projection_yaw.hpp
src/rm_armor_detector/include/rm_armor_detector/detector_node/: detector_node.hpp  lights_detector.hpp  number_classifier.hpp  projection_yaw.hpp
src/rm_armor_detector/launch/: detector_launch.py
src/rm_armor_detector/src/: cuda_detector.cpp  detector_node.cpp  lights_detector.cpp  openvino_detector.cpp  pnp_solver.cpp  projection_yaw.cpp
src/rm_armor_detector/src/detector_node/: detector_node.cpp  lights_detector.cpp  number_classifier.cpp  pnp_solver.cpp
src/rm_armor_tracker/: CMakeLists.txt  package.xml
src/rm_armor_tracker/include/rm_armor_tracker/: armor_ekf.hpp  ekf.hpp  tracker.hpp  tracker_node.hpp
src/rm_armor_tracker/src/: armor_ekf.cpp  ekf.cpp  tracker.cpp  tracker_node.cpp
src/rm_gimbal_description/: CMakeLists.txt  package.xml
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro  rm_gimbal_example.urdf.xacro
src/rm_msgs/: CMakeLists.txt  package.xml
src/rm_msgs/msg/: Armor.msg  ClosedLoop.msg  SendSerial.msg  Status.msg  Target.msg
src/rm_rune/: .gitignore  CMakeLists.txt  Readme.md  package.xml
src/rm_rune/include/rm_rune/: blade.hpp  configuration.hpp  contour_info.hpp  detect.hpp  image_processer.hpp  openvino_detect.hpp  power_rune.hpp  prediction.hpp  rm_rune_node.hpp
src/rm_rune/launch/: rm_rune_launch.py
src/rm_rune/src/: blade.cpp  configuration.cpp  contour_info.cpp  detect.cpp  image_processer.cpp  openvino_detect.cpp  power_rune.cpp  prediction.cpp  rm_rune_node.cpp
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
src/rm_serial_driver/src/: rm_serial_driver.cpp
src/rm_startup/: CMakeLists.txt  package.xml
src/rm_startup/config/: rm_camera_info_example.yaml  rm_launch_parameters_example.yaml  rm_node_parameters.yaml  rm_node_parameters_example.yaml
src/rm_startup/launch/: rm_launch.py
src/ros2-hik-camera/src/: hik_camera_node.cpp
src/ros2-mindvision-camera/: CMakeLists.txt
src/ros2-mindvision-camera/src/: mv_camera_node.cpp
