cmake_minimum_required(VERSION 3.8)
project(rm_armor_detector)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

#set(OpenVINO_LIBRARIES "//opt/inter/usr/local/runtime/lib/intel64/libopenvino.so")
#set(OpenVINO_INCLUDE_DIRS "/opt/inter/usr/local/runtime/include")
# 设置 OpenVINO 头文件路径
include_directories(
    /home/mechax/zyb/zyb_mechax_plan/openvino/src/core/include
    /home/mechax/zyb/zyb_mechax_plan/openvino/src/inference/include
)

# find dependencies
find_package(ament_cmake_auto REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

ament_auto_find_build_dependencies()

ament_auto_add_library(${PROJECT_NAME} SHARED
  DIRECTORY src
)

target_include_directories(${PROJECT_NAME} PUBLIC include/rm_armor_detector)

rclcpp_components_register_node(${PROJECT_NAME}
  PLUGIN rm_armor_detector::ArmorDetectorNode
  EXECUTABLE ${PROJECT_NAME}_node
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_auto_package(
  INSTALL_TO_SHARE
  model
)
